Finish edit of C1 Guided Tour

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/4-edit-program.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/4-edit-program.mdx
@@ -11,7 +11,7 @@ Programming involves frequent iterative cycles of editing and running your progr
 Let's make a small enhancement to our current code to step through this process.
 
 <Steps>
-1. Make sure you have VS Code running, with your code open, and a Terminal all ready to go. If you have followed along from the previous page you should be all ready to go.
+1. Make sure you have VS Code running, with your code open, and a terminal all ready to go. If you have followed along from the previous page you should be ready.
    It should look something like this:
    ![Run the program you created](./images/run-program.png)
 2. Now, let's make a small change to the program's code. Update the code to output your name by copying and modifying the following code.
@@ -22,28 +22,25 @@ Let's make a small enhancement to our current code to step through this process.
     {
         write_line("Hello World");
         write_line(" - by Andrew");
+        
+        return 0;
     }
     ```
 
     The highlights shows the code that has been added. Add this to your code, but update to show your name.
-3. Switch to your Terminal in VS Code, and try running the program again.
-
-   :::tip
-   To run the program you use `./my_program` -- where *my_program* is the name of the executable file you created.
-   :::
-
+3. Switch to your terminal in VS Code, and try running the program again.
    You should see something like this:
    ![What went wrong, running again shows the old output](./images/run-again-wrong.png)
 
-   This is not what we expected... there is no output to show the *by line*!
+   This is not what we expected...there is no output to show the new name line!
    
    What has gone wrong?
    
-   Have a think and then click the accordion below to explore the answers and next steps.
+   Have a think and then click below to explore the answers and next steps.
 </Steps>
 
 <Accordion>
-<AccordionItem header="The problems and their solutions">
+<AccordionItem header="Click to reveal the problems and their solutions">
 
 There are actually a couple of problems here. Let's step through them.
 
@@ -51,9 +48,9 @@ There are actually a couple of problems here. Let's step through them.
 
    When you create a program, the compiler will read the code and produce an executable file from the code at that time. If you change the code, then you have to **rebuild** the program.
 
-    To rebuild the program you simply run the compiler again.
+    To rebuild the program, you simply run the compiler again.
     
-    Switch to your Terminal and run:
+    Switch to your terminal and run:
 
     ```sh
     clang++ hello-world.cpp -l SplashKit -o my_program -Wall
@@ -61,7 +58,7 @@ There are actually a couple of problems here. Let's step through them.
 
     Then run the resulting program again. Do you see the output now? Maybe not.
 
-2. In my case, the new program still shows the old output. Why?
+2. In my case, the program still shows the old output. Why?
    
    Looking at the code I can see the instruction that should be running, but it isn't.
    
@@ -73,41 +70,17 @@ There are actually a couple of problems here. Let's step through them.
 
    The problem is the file was not saved.
    
-   Remember, the compiler will *read* the file from the storage, not what is shown in VS Code. Make sure to **save your files before** you compile them.
+   Remember, the compiler will read the file from the **storage**, which is not necessarily what is shown in VS Code. Make sure to **save your files before you compile** them.
 
    :::tip
-   The fastest, and easiest way to save your file is to use the shortcut `ctrl-s` (`cmd-s` on macOS). Alternatively, you can access the save option from the file menu.
+   The fastest, and easiest way to save your file is to use the shortcut `ctrl-s` (`cmd-s` on macOS). Alternatively, you can access the "Save" option from the "File" menu.
    :::
 
 </AccordionItem>
 </Accordion>
 
 <Steps>
-4. Make sure you get it working before continuing. When you successfully compile and run your program you should see two lines output to the Terminal. My version is shown below.
+3. Make sure you get your updated program working before continuing. When you successfully compile and run your program you should see two lines output to the terminal. My version is shown below.
    
    ![Final success, showing the two lines output to the terminal](./images/run-again-success.png)
 </Steps>
-
-:::tip[Track your learning journey as you go]
-
-Now would be a good time to capture some progress for your learning journey.
-
-Think about what you have learnt by walking through these steps. At a surface level this may include things like:
-
-- the instructions to run the compiler
-- how to run the program you created
-
-Related to this you should have noticed things like:
-
-- what a compiler is
-- what a program is
-- the steps to build a program: code - build - run - repeat
-
-At a deeper level you may want to reflect on more personal insights like:
-
-- how you dealt with any issues you faced
-- strategies you could apply to succeed going forward
-
-The main thing is to make sure to capture your new understanding. So that you are conscious of this.
-
-:::
