--- a/src/content/docs/book/part-0-getting-started/1-building-programs/4-activities/2-test-your-knowledge.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/4-activities/2-test-your-knowledge.mdx
@@ -2,20 +2,22 @@
 title: Test Your Knowledge
 ---
 import CodeScroll from '/src/components/CodeScroll.astro'
+import { Steps } from '@astrojs/starlight/components';
 
 Here is a fun hello world program to wrap up this section.
 
-The code for this part will be using SplashKit to draw images, play sound effects and draw text with a specific font.
+The code for this part will be using SplashKit to draw images, play sound effects, and draw text with a specific font.
 
 You need to:
 
+<Steps>
 1. Create a new code file for this project.
-1. Copy the following code and paste it into your new file.
-1. Use what you have learnt from this chapter to compile and run this program.
-
-:::tip
-Do this without referencing the material. You want to test that you know how to do this yourself. As you progress, you will be building and running many programs. So you need to know how to do this without thinking.
-:::
+2. Copy the following code and paste it into your new file.
+3. Use what you have learnt from this chapter to compile and run this program.
+    :::tip
+    Do this without referencing the material. You want to test that you know how to do this yourself. As you progress, you will be building and running many programs, so you need to develop the skills to do this quickly.
+    :::
+</Steps>
 
 <CodeScroll>
 ```cpp
